<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sports</string>
    <string name="sports_hub_keeps_you_informed_about_all_the_sports_events_happening_around_you_whether_it_s_a_local_football_match_a_basketball_game_or_a_marathon_you_ll_get_real_time_updates_and_notifications" >sports hub keeps you informed about all the sports events happening around you whether it a local football match a basketball game or a marathon you get real time updates and notifications</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="back">back</string>
    <string name="hello">Hello !</string>
    <string name="register_to_get_started">register to get started !!!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="login_now">login now</string>
    <string name="toggle_password_visibility">toggle password visibility</string>
    <string name="back_button">back button</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="login">Login</string>
    <string name="menu">menu</string>
    <string name="notification">notification</string>
    <string name="event_image">event image</string>
    <string name="football_match">Football Match</string>
    <string name="magic_cube">Magic Cube</string>
    <string name="basketball_match">Basketball Match</string>
    <string name="events">events</string>
    <string name="calendar">calendar</string>
    <string name="about">about</string>
    <string name="settings">settings</string>
    <string name="log_out">log out</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">"navigation_drawer_close "</string>
    <string name="sports_enthusiastic">sports enthusiastic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit\n</string>
    <string name="change_profile_picture">"change profile picture "</string>
    <string name="bio">bio</string>
    <string name="update">"update "</string>
    <string name="mobile_number">mobile number</string>
    <string name="profile_image">Profile image</string>
    <string name="camera_button">"camera button "</string>
</resources>