<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back"/>

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/registerSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTitle"
        android:layout_marginTop="8dp"
        android:text="@string/register_to_get_started"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerSubtitle"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/username"
        android:background="@drawable/edit_text_background"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:background="@drawable/edit_text_background"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:hint="@string/confirm_password"
        android:background="@drawable/edit_text_background"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="49dp"
        android:minHeight="48dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/loginPrompt"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="124dp"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="87dp"
        android:layout_height="21dp"
        android:layout_alignBaseline="@id/loginPrompt"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="258dp"
        android:layout_marginEnd="87dp"
        android:text="@string/login_now"
        android:textColor="@android:color/holo_blue_light" />

</RelativeLayout>
