<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@color/gray"
        android:src="@drawable/ic_profile_picture" />


    <ImageButton
        android:id="@+id/changeProfilePictureButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/imageViewProfile"
        android:layout_alignBottom="@id/imageViewProfile"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="-9dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/change_profile_picture"
        android:src="@drawable/camera_icon" />

    <!-- Bio Field -->

    <EditText
        android:id="@+id/textViewUsername"
        android:layout_width="378dp"
        android:layout_height="60dp"
        android:layout_below="@id/imageViewProfile"
        android:layout_marginTop="70dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/textViewBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewUsername"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/bio"
        android:lines="3"
        android:maxLines="5"
        android:minLines="3"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />


    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewBio"
        android:layout_marginTop="49dp"
        android:backgroundTint="@android:color/black"
        android:minHeight="48dp"
        android:text="@string/update"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="190dp" />
</RelativeLayout>
