<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layoutDirection="ltr"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Add a NestedScrollView to enable scrolling -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"> <!-- This ensures the content takes up the full height -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Top bar with menu and notification icons -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/menu_hamburger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/menu"
                    android:src="@drawable/ic_menu_hambuger"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="47dp"
                    android:layout_height="49dp"
                    android:contentDescription="@string/notification"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Search bar -->

            <!-- Card Views -->

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="325dp"
                android:layout_height="38dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/search_bar_rounded"
                android:clickable="true"
                android:iconifiedByDefault="false"
                android:padding="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:queryHint="Search"
                app:searchIcon="@drawable/ic_search" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="281dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Image at the top -->

                    <!-- Text below the image -->
                    <ImageView
                        android:id="@+id/cardImage1"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/event_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/football" />

                    <TextView
                        android:id="@+id/cardText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/football_match"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <!-- Register Button -->
                    <Button
                        android:id="@+id/registerButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="Register"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="282dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Image at the top -->
                    <ImageView
                        android:id="@+id/cardImage2"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="Event image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cube"
                        tools:ignore="HardcodedText" />

                    <!-- Text below the image -->
                    <TextView
                        android:id="@+id/cardText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="Magic cube"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <!-- Register Button -->
                    <Button
                        android:id="@+id/registerButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="Register"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="14dp"
                app:cardBackgroundColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="282dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Image at the top -->
                    <ImageView
                        android:id="@+id/cardImage3"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="Event image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/basketball"
                        tools:ignore="HardcodedText" />

                    <!-- Text below the image -->
                    <TextView
                        android:id="@+id/cardText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="Basketball match"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <!-- Register Button -->
                    <Button
                        android:id="@+id/registerButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/black"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="Register"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
